--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,12 +171,12 @@ nav{
     padding-left: 20px;
 }
 .featured-text-card span {
-    background: #efefef; /* Cinza escuro com 20% de opacidade */
-    color: rgb(0, 0, 0); /* Cor do texto */
+    background: var(--first-color);
+    color: var(--color-white);
     padding: 2px 8px;
     font-size: 16px;
     border-radius: 5px;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.4);
 }
 
 .featured-name{
@@ -367,13 +367,21 @@ h3{
     flex-wrap: wrap;
     gap: 5px;
 }
-.skills-list span{
+.skills-list span {
     font-size: 14px;
     background: var(--last-color);
     color: var(--color-white);
     padding: 2px 10px;
     border-radius: 5px;
+    transition: transform 0.3s; /* Adiciona uma transição suave */
+
 }
+
+.skills-list span:hover {
+    transform: translateY(-3px); /* Move o elemento para cima e aumenta o tamanho */
+}
+
+
 
 /* ----- PROJECTS BOX ----- */
 
@@ -392,18 +400,18 @@ h3{
 .project-box {
     width: 100%; /* Ocupa 100% da largura disponível */
     max-width: 25%; /* Não excede 30% da largura do contêiner pai */
-    min-width: 250px; /* Largura mínima */
+    min-height: 250px; /* Largura mínima */
     overflow: hidden;
 
 }
 
 /* Estilos para a imagem do projeto */
 .project-image img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 250px;
     object-fit: cover; /* Ajusta a imagem para cobrir todo o espaço disponível */
     border-radius: 10px 10px 10px 10px; /* Border radius apenas para os cantos superiores */
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.425); /* Adiciona o efeito box-shadow apenas nas imagens */
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4); /* Adiciona o efeito box-shadow apenas nas imagens */
 }
 
 
@@ -728,7 +736,7 @@ footer{
 }
 
 .switch:hover::after {
-    opacity: 1; /* Mostra a legenda ao passar o mouse sobre o elemento */
+    opacity: 0.5; /* Mostra a legenda ao passar o mouse sobre o elemento */
 }
 /* LEGENDA */
 
