--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,15 +343,21 @@ h3{
     font-size: 15px;
     color: #777;
 }
-.about-btn button{
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
+.about-btn {
+    margin-top: 10px; /* Ajuste o espaçamento entre o texto e o botão */
+    margin-bottom: -40px; /* Ajuste o espaçamento entre o texto e o botão */
+}
+
+.about-btn button {
     background: var(--last-color);
     color: var(--color-white);
     border-radius: 30px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
 }
-.about-btn button:hover{
+
+.about-btn button:hover {
     background: var(--first-color-hover);
 }
 
